--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -58,7 +58,8 @@ jobs:
       - name: Build with Maven (Dummy Instead of Real Execution)
         run: |
           echo "✅ DUMMY EXECUTION MODE"
-          echo "Would run: mvn clean test -Denv=$RUNNER_TYPE -Dcucumber.filter.tags=$EXECUTION_TYPE"
+          echo "Would run: mvn clean test -Denv=$RUNNER_TYPE -Dcucumber.filter.Test=$EXECUTION_TYPE "
+          echo "module "Running Module: $Tags"
           echo "Simulating test run..."
           sleep 3
           echo "✅ Dummy Sanity Execution Completed Successfully"
