--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -39,10 +39,15 @@ jobs:
       contents: read
       packages: write
 
+    # env:
+    #   RUNNER_TYPE: ${{ github.event.inputs.runnerType1 || github.event.client_payload.runnerType1 || 'Prod' }}
+    #   EXECUTION_TYPE: ${{ github.event.inputs.textInput || github.event.client_payload.textInput || github.event.inputs.runnerType2 || github.event.client_payload.runnerType2 || '@IPRUSanity' }}
+    #   TAGS: ${{ github.event.inputs.textInput || github.event.client_payload.textInput || '' }}
+
     env:
-      RUNNER_TYPE: ${{ github.event.inputs.runnerType1 || github.event.client_payload.runnerType1 || 'Prod' }}
-      EXECUTION_TYPE: ${{ github.event.inputs.textInput || github.event.client_payload.textInput || github.event.inputs.runnerType2 || github.event.client_payload.runnerType2 || '@IPRUSanity' }}
-      TAGS: ${{ github.event.inputs.textInput || github.event.client_payload.textInput || '' }}
+      RUNNER_TYPE: ${{ github.event.inputs.runnerType1 || 'Prod' }}
+      EXECUTION_TYPE: ${{ github.event.inputs.textInput || github.event.inputs.runnerType2 || '@IPRUSanity' }}
+      TAGS: ${{ github.event.inputs.textInput || '' }}
 
     steps:
       - name: Display Command
